// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCollection should add and remove links 1`] = `
<DocumentFragment>
  <div
    class="sc-fznZeY btEwYs font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary-600"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <div>
        <div
          class="flex space-x-2"
        >
          <div
            class="flex flex-col w-2/5"
          >
            <div
              class="w-full"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Add media"
              >
                Add media
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR flex flex-1"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="sc-AxhCb clCjoe overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary sr-only"
                  data-testid="select-list__input"
                  readonly=""
                  type="text"
                  value="twitter"
                />
                <div
                  class="relative w-full cursor-pointer"
                >
                  <div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-1-label downshift-1-toggle-button"
                      class="sc-fzplWN eNOicT  is-selected "
                      data-testid="select-list__toggle-button"
                      id="downshift-1-toggle-button"
                      type="button"
                    >
                      Twitter
                    </button>
                    <ul
                      aria-labelledby="downshift-1-label"
                      class="sc-fznyAO hCfgtZ"
                      id="downshift-1-menu"
                      role="listbox"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="sc-AxhUy sc-AxheI bSLhdh w-10 pointer-events-none text-theme-neutral-500"
                  >
                    <div
                      class="sc-AxiKw iDEwuj"
                      height="8"
                      width="8"
                    >
                      <svg>
                        arrowdown.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Link"
              >
                Link
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR"
            >
              <input
                class="sc-AxhCb clCjoe overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-20"
                data-testid="LinkCollection__input-link"
                maxlength="255"
                placeholder=" "
                type="text"
              />
            </div>
          </div>
        </div>
        <button
          class="sc-AxjAm ddJBbC w-full mt-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="mt-8 mb-2 text-sm text-theme-neutral-700"
      >
        Your media
      </div>
      <div
        class="sc-fznKkj crvYjk"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                    Name
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                    Link
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                     
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should render 1`] = `
<DocumentFragment>
  <div
    class="sc-fznZeY btEwYs font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 rounded-full text-theme-primary-600 bg-theme-primary-100"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should select a specific link type 1`] = `
<DocumentFragment>
  <div
    class="sc-fznZeY btEwYs font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary-600"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-4"
    >
      <div>
        <div
          class="flex space-x-2"
        >
          <div
            class="flex flex-col w-2/5"
          >
            <div
              class="w-full"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Add media"
              >
                Add media
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR flex flex-1"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="sc-AxhCb clCjoe overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary sr-only"
                  data-testid="select-list__input"
                  readonly=""
                  type="text"
                  value=""
                />
                <div
                  class="relative w-full cursor-pointer"
                >
                  <div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-8-label downshift-8-toggle-button"
                      class="sc-fzplWN eNOicT   "
                      data-testid="select-list__toggle-button"
                      id="downshift-8-toggle-button"
                      type="button"
                    />
                    <ul
                      aria-labelledby="downshift-8-label"
                      class="sc-fznyAO hCfgtZ"
                      id="downshift-8-menu"
                      role="listbox"
                      tabindex="-1"
                    />
                  </div>
                  <div
                    class="sc-AxhUy sc-AxheI bSLhdh w-10 pointer-events-none text-theme-neutral-500"
                  >
                    <div
                      class="sc-AxiKw iDEwuj"
                      height="8"
                      width="8"
                    >
                      <svg>
                        arrowdown.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                label="Link"
              >
                Link
              </label>
            </div>
            <div
              class="sc-Axmtr jzhOwR"
            >
              <input
                class="sc-AxhCb clCjoe overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-20"
                data-testid="LinkCollection__input-link"
                maxlength="255"
                placeholder=" "
                type="text"
              />
            </div>
          </div>
        </div>
        <button
          class="sc-AxjAm ddJBbC w-full mt-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          disabled=""
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="mt-8 mb-2 text-sm text-theme-neutral-700"
      >
        Your media
      </div>
      <div
        class="sc-fznKkj crvYjk"
        role="table"
      >
        <table
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                    Primary
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                    Name
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                    Link
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral-500"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top  undefined"
                >
                  <div
                    class="mr-2"
                  >
                     
                  </div>
                  <div
                    class="flex items-center text-theme-color-neutral-500"
                    data-testid="table__Sort"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="font-semibold border-b border-theme-neutral-200"
            >
              <td
                class="w-16 text-center"
              >
                <input
                  class="sc-fzpans bwXzQt"
                  color="success"
                  data-testid="LinkCollection__selected"
                  type="radio"
                />
              </td>
              <td
                class="w-40 pb-6 pt-2"
              >
                Twitter
              </td>
              <td
                class="pb-6 pt-2"
              >
                testing link
              </td>
              <td
                class="w-16 text-right pb-4"
              >
                <button
                  class="sc-AxjAm kwTlRm"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
            <tr
              class="font-semibold border-b border-theme-neutral-200"
            >
              <td
                class="w-16 text-center"
              />
              <td
                class="w-40 py-6"
              >
                Facebook
              </td>
              <td
                class="py-6"
              >
                testing link 2
              </td>
              <td
                class="w-16 text-right false"
              >
                <button
                  class="sc-AxjAm kwTlRm"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should toggle open/close of link collection 1`] = `
<DocumentFragment>
  <div
    class="sc-fznZeY btEwYs font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <div>
        <span
          class="font-semibold"
        >
          Social Media
        </span>
        <div
          class="mt-2 text-theme-neutral-700"
        >
          Tell people more about yourself through social media
        </div>
      </div>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 rounded-full text-theme-primary-600 bg-theme-primary-100"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
